updates for menu done, fixed so that we don't rely on html helpers anymore. this should make it easier to alter the html generated.  got menu centered, and pulled up from the bottom so it shows up over the header area. need to try and find alternative since this puts extra space on the bottom of the header that i have to account for.

--- a/EQNWebsiteUI/Content/StyleSheets/Site.css
+++ b/EQNWebsiteUI/Content/StyleSheets/Site.css
@@ -69,7 +69,7 @@ footer {
 
 .header-wrapper {
     position: relative;
-    height: 161px;
+    height: 138px;
 }
 
 .false-header {
@@ -81,6 +81,25 @@ footer {
     cursor: pointer;
     color: blue;
     text-decoration: underline;
+}
+
+.headerImage {
+    width: 100%;
+}
+
+.header-display {
+    position: relative;
+    overflow: hidden;
+}
+
+.header-sideDisplay {
+    width: 25%;
+    height: 138px;
+    background-color: #7F00FF;
+    border: 2px solid #B835FF;
+    text-align: center;
+    border-collapse: collapse;
+    float: left;
 }
 
 /* Main Menu*/
@@ -136,7 +155,7 @@ footer {
     width: 162px;
     height: 38px;
 }
-.mi-about {
+/*.mi-about {
     background-position: -491px 0px;
 }
 .mi-about:hover {
@@ -169,6 +188,9 @@ footer {
 }
 .mi-contact:hover {    
     background-position: 0px -38px;
+}*/
+.MainMenuWrapper {
+    bottom: 38px;
 }
 /* Root Content */
 /*-----------------------------------------------------------------------------------------------------------------------------*/
